# DynaMesh-Thermal

./: .gitignore  CMakeLists.txt  README.md  app.py
src/: main.cu
src/core/: Config.h  Grid.cuh  MemoryManager.cuh
src/math/: LinearSolver.cu  LinearSolver.cuh
src/optimization/: Adjoint.cu  Adjoint.cuh  Objective.cu  Objective.cuh  SIMP.cu  SIMP.cuh
src/physics/: AdvectionDiffusion.cu  AdvectionDiffusion.cuh  NavierStokesDarcy.cu  NavierStokesDarcy.cuh
